[feat] Endpoint para creación de publicaciones de tipo Hotel
Se agrega un nuevo endpoint para la creación de publicaciones de tipo Hotel en el sistema.
Este endpoint permitirá a los usuarios crear nuevas publicaciones proporcionando la información necesaria a través de un objeto JSON.
Se incluyen tests unitarios para asegurar el correcto funcionamiento del nuevo endpoint (service y rest controller).

Cambié el ícono de la app en el front :)
[fix(front)] Además, configuré el front para que funcione con el mismo cliente API.
El cliente permite uso en desarrollo (en mí caso, con IntelliJ) y producción (Dockerizado).